--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,11 +1,11 @@
-name: te_algorithms
+name: Test
 
 on:
   workflow_dispatch:
   push:
     branches:
       - main
-      - test_ci
+      - develop
   pull_request:
     types:
       - opened
@@ -13,6 +13,7 @@ on:
       - synchronize
     branches:
       - main
+      - develop
 
 jobs:
   build:
