--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "marshmallow>=3.21.3,<4.0.0",
     "marshmallow-dataclass>=8.7.1",
     "defusedxml>=0.7.1",
-    "te_schemas @ git+https://github.com/ConservationInternational/trends.earth-schemas.git@master",
+    "te_schemas @ git+https://github.com/ConservationInternational/trends.earth-schemas.git",
 ]
 dynamic = ["version"]
 
