--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,3 +41,36 @@ jobs:
         run: |
           pip install -e .
           pytest
+
+  # ── Informational: marshmallow 4.x (allowed to fail) ─────────────
+  test-marshmallow4:
+    name: "marshmallow 4 / Python ${{ matrix.python-version }} (informational)"
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.12", "3.13"]
+    steps:
+      - uses: actions/checkout@v5
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+          pip install earthengine-api
+          sudo apt-add-repository ppa:ubuntugis/ubuntugis-unstable
+          sudo apt-get update
+          sudo apt-get install gdal-bin libgdal-dev
+          pip install GDAL==`gdal-config --version`
+      - name: Install package then upgrade to marshmallow 4.x
+        run: |
+          pip install -e .
+          pip install "marshmallow>=4.2.2" "marshmallow-dataclass>=8.7.1"
+          python -c "import marshmallow; v=marshmallow.__version__; print(f'marshmallow {v}'); assert int(v.split('.')[0]) >= 4"
+      - name: Run marshmallow compat tests
+        run: pytest tests/test_marshmallow_compat.py -v
+      - name: Run full test suite
+        run: pytest
