--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "marshmallow>=3.26.2",
     "marshmallow-dataclass>=8.7.1",
     "defusedxml>=0.7.1",
-    "te_schemas @ git+https://github.com/ConservationInternational/trends.earth-schemas.git@master",
+    "te_schemas @ git+https://github.com/ConservationInternational/trends.earth-schemas.git@v2.2.4",
 ]
 
 [project.license]
